src/nrrd/nrrd.h


typedef struct {
  size_t size;              
  double spacing;           
  double thickness;         
  double min, max;          
  double spaceDirection[NRRD_SPACE_DIM_MAX];
  int center;               
  int kind;                 
  char *label,              
    *units;                 
} NrrdAxisInfo;
typedef struct {
  void *data;                       
  int type;                         
  unsigned int dim;                 
  NrrdAxisInfo axis[NRRD_DIM_MAX];  
  char *content;                    
  char *sampleUnits;                
  int space;                        
  unsigned int spaceDim;            
  char *spaceUnits[NRRD_SPACE_DIM_MAX];
  double spaceOrigin[NRRD_SPACE_DIM_MAX];
  double measurementFrame[NRRD_SPACE_DIM_MAX][NRRD_SPACE_DIM_MAX];
  size_t blockSize;                 
  double oldMin, oldMax;            
  void *ptr;                        
  char **cmt;
  airArray *cmtArr;
  char **kvp;
  airArray *kvpArr;
} Nrrd;
struct NrrdIoState_t;
struct NrrdEncoding_t;
typedef struct {
  char name[AIR_STRLEN_SMALL];    
  int isImage,    
    readable,     
    usesDIO;      
  int (*available)(void);
  int (*nameLooksLike)(const char *filename);
  int (*fitsInto)(const Nrrd *nrrd, const struct NrrdEncoding_t *encoding,
                   int useBiff);
  int (*contentStartsLike)(struct NrrdIoState_t *nio);
  int (*read)(FILE *file, Nrrd *nrrd, struct NrrdIoState_t *nio);
  int (*write)(FILE *file, const Nrrd *nrrd, struct NrrdIoState_t *nio);
} NrrdFormat;
typedef struct NrrdEncoding_t {
  char name[AIR_STRLEN_SMALL],    
    suffix[AIR_STRLEN_SMALL];     
  int endianMatters,
    isCompression;
  int (*available)(void);
  int (*read)(FILE *file, void *data, size_t elementNum,
              Nrrd *nrrd, struct NrrdIoState_t *nio);
  int (*write)(FILE *file, const void *data, size_t elementNum,
               const Nrrd *nrrd, struct NrrdIoState_t *nio);
} NrrdEncoding;
typedef struct NrrdIoState_t {
  char *path,               
    *base,                  
    *line,                  
    *dataFNFormat,          
    **dataFN,               
    *headerStringWrite;     
  const char
    *headerStringRead;      
  airArray *dataFNArr;      
  FILE *headerFile,         
    *dataFile;              
  unsigned int dataFileDim, 
    lineLen,                
    charsPerLine,           
    valsPerLine,            
    lineSkip,               
    headerStrlen,           
    headerStrpos;           
  long int byteSkip;        
  long int *dataFSkip;      
  airArray *dataFSkipArr;   
  int dataFNMin,            
    dataFNMax,              
    dataFNStep;             
  unsigned int dataFNIndex; 
  int pos,                  
    endian,                 
    seen[NRRD_FIELD_MAX+1], 
    detachedHeader,         
    bareText,               
    skipData,               
    skipFormatURL,          
    keepNrrdDataFileOpen,   
    zlibLevel,              
    zlibStrategy,           
    bzip2BlockSize,         
    learningHeaderStrlen;   
  void *oldData;            
  size_t oldDataSize,       
    chunckElementNumber;    
  const NrrdFormat *format;
  const NrrdEncoding *encoding;
} NrrdIoState;
typedef struct {
  double min, max;  
  int hasNonExist;  
} NrrdRange;
typedef struct {
  const Nrrd *nrrd;            
  Nrrd *ownNrrd;               
  double val;                  
  size_t size;                 
  char *data;                  
  size_t left;                 
  double (*load)(const void*); 
} NrrdIter;
NRRD_EXPORT int nrrdKeyValueAdd(Nrrd *nrrd,
                                const char *key, const char *value);
NRRD_EXPORT char *nrrdKeyValueGet(const Nrrd *nrrd, const char *key);
NRRD_EXPORT void nrrdKeyValueIndex(const Nrrd *nrrd,
                                   char **keyP, char **valueP,
                                   unsigned int ki);
NRRD_EXPORT int nrrdKeyValueErase(Nrrd *nrrd, const char *key);
NRRD_EXPORT void nrrdKeyValueClear(Nrrd *nrrd);
NRRD_EXPORT int nrrdKeyValueCopy(Nrrd *nout, const Nrrd *nin);
NRRD_EXPORT void nrrdSwapEndian(Nrrd *nrrd);
NRRD_EXPORT const NrrdFormat *const nrrdFormatNRRD;
NRRD_EXPORT const NrrdFormat *const nrrdFormatPNM;
NRRD_EXPORT const NrrdFormat *const nrrdFormatPNG;
NRRD_EXPORT const NrrdFormat *const nrrdFormatVTK;
NRRD_EXPORT const NrrdFormat *const nrrdFormatText;
NRRD_EXPORT const NrrdFormat *const nrrdFormatEPS;
NRRD_EXPORT const NrrdFormat *const nrrdFormatUnknown;
NRRD_EXPORT const NrrdFormat *
  const nrrdFormatArray[NRRD_FORMAT_TYPE_MAX+1];
NRRD_EXPORT const NrrdEncoding *const nrrdEncodingRaw;
NRRD_EXPORT const NrrdEncoding *const nrrdEncodingAscii;
NRRD_EXPORT const NrrdEncoding *const nrrdEncodingHex;
NRRD_EXPORT const NrrdEncoding *const nrrdEncodingGzip;
NRRD_EXPORT const NrrdEncoding *const nrrdEncodingBzip2;
NRRD_EXPORT const NrrdEncoding *const nrrdEncodingUnknown;
NRRD_EXPORT const NrrdEncoding *
  const nrrdEncodingArray[NRRD_ENCODING_TYPE_MAX+1];
NRRD_EXPORT int nrrdLineSkip(FILE *dataFile, NrrdIoState *nio);
NRRD_EXPORT int nrrdByteSkip(FILE *dataFile, Nrrd *nrrd, NrrdIoState *nio);
NRRD_EXPORT int nrrdLoad(Nrrd *nrrd, const char *filename, NrrdIoState *nio);
NRRD_EXPORT int nrrdLoadMulti(Nrrd *const *nin, unsigned int ninLen,
                              const char *fnameFormat,
                              unsigned int numStart, NrrdIoState *nio);
NRRD_EXPORT int nrrdRead(Nrrd *nrrd, FILE *file, NrrdIoState *nio);
NRRD_EXPORT int nrrdStringRead(Nrrd *nrrd, const char *string,
                               NrrdIoState *nio);
NRRD_EXPORT int nrrdIoStateSet(NrrdIoState *nio, int parm, int value);
NRRD_EXPORT int nrrdIoStateEncodingSet(NrrdIoState *nio,
                                       const NrrdEncoding *encoding);
NRRD_EXPORT int nrrdIoStateFormatSet(NrrdIoState *nio,
                                     const NrrdFormat *format);
NRRD_EXPORT int nrrdIoStateGet(NrrdIoState *nio, int parm);
NRRD_EXPORT const NrrdEncoding *nrrdIoStateEncodingGet(NrrdIoState *nio);
NRRD_EXPORT const NrrdFormat *nrrdIoStateFormatGet(NrrdIoState *nio);
NRRD_EXPORT int nrrdSave(const char *filename, const Nrrd *nrrd,
                         NrrdIoState *nio);
NRRD_EXPORT int nrrdSaveMulti(const char *fnameFormat,
                              const Nrrd *const *nin, unsigned int ninLen,
                              unsigned int numStart, NrrdIoState *nio);
NRRD_EXPORT int nrrdWrite(FILE *file, const Nrrd *nrrd,
                          NrrdIoState *nio);
NRRD_EXPORT int nrrdStringWrite(char **stringP, const Nrrd *nrrd,
                                NrrdIoState *nio);
NRRD_EXPORT int nrrdAxesInsert(Nrrd *nout, const Nrrd *nin, unsigned int ax);
NRRD_EXPORT int nrrdInvertPerm(unsigned int *invp, const unsigned int *perm,
                               unsigned int n);
NRRD_EXPORT int nrrdAxesPermute(Nrrd *nout, const Nrrd *nin,
                                const unsigned int *axes);
NRRD_EXPORT int nrrdShuffle(Nrrd *nout, const Nrrd *nin, unsigned int axis,
                            const size_t *perm);
NRRD_EXPORT int nrrdAxesSwap(Nrrd *nout, const Nrrd *nin,
                             unsigned int ax1, unsigned int ax2);
NRRD_EXPORT int nrrdFlip(Nrrd *nout, const Nrrd *nin, unsigned int axis);
NRRD_EXPORT int nrrdJoin(Nrrd *nout, const Nrrd *const *nin,
                         unsigned int numNin,
                         unsigned int axis, int incrDim);
NRRD_EXPORT int nrrdReshape_va(Nrrd *nout, const Nrrd *nin, unsigned int dim,
                               ...  );
NRRD_EXPORT int nrrdReshape_nva(Nrrd *nout, const Nrrd *nin,
                                unsigned int dim, const size_t *size);
NRRD_EXPORT int nrrdAxesSplit(Nrrd *nout, const Nrrd *nin, unsigned int ax,
                              size_t sizeFast, size_t sizeSlow);
NRRD_EXPORT int nrrdAxesDelete(Nrrd *nout, const Nrrd *nin, unsigned int ax);
NRRD_EXPORT int nrrdAxesMerge(Nrrd *nout, const Nrrd *nin, unsigned int ax);
NRRD_EXPORT int nrrdBlock(Nrrd *nout, const Nrrd *nin);
NRRD_EXPORT int nrrdUnblock(Nrrd *nout, const Nrrd *nin, int type);
NRRD_EXPORT int nrrdTile2D(Nrrd *nout, const Nrrd *nin,
                           unsigned int ax0, unsigned int ax1,
                           unsigned int axSplit,
                           size_t sizeFast, size_t sizeSlow);
NRRD_EXPORT int nrrdUntile2D(Nrrd *nout, const Nrrd *nin,
                             unsigned int ax0, unsigned int ax1,
                             unsigned int axMerge, size_t sizeFast,
                             size_t sizeSlow);
NRRD_EXPORT hestCB *nrrdHestNrrd;
NRRD_EXPORT hestCB *nrrdHestKernelSpec;
NRRD_EXPORT hestCB *nrrdHestIter;
NRRD_EXPORT NrrdIter *nrrdIterNew(void);
NRRD_EXPORT void nrrdIterSetValue(NrrdIter *iter, double val);
NRRD_EXPORT void nrrdIterSetNrrd(NrrdIter *iter, const Nrrd *nrrd);
NRRD_EXPORT void nrrdIterSetOwnNrrd(NrrdIter *iter, Nrrd *nrrd);
NRRD_EXPORT double nrrdIterValue(NrrdIter *iter);
NRRD_EXPORT char *nrrdIterContent(NrrdIter *iter);
NRRD_EXPORT NrrdIter *nrrdIterNix(NrrdIter *iter);
NRRD_EXPORT NrrdRange *nrrdRangeNew(double min, double max);
NRRD_EXPORT NrrdRange *nrrdRangeCopy(const NrrdRange *range);
NRRD_EXPORT NrrdRange *nrrdRangeNix(NrrdRange *range);
NRRD_EXPORT void nrrdRangeReset(NrrdRange *range);
NRRD_EXPORT void nrrdRangeSet(NrrdRange *range,
                              const Nrrd *nrrd, int blind8BitRange);
NRRD_EXPORT void nrrdRangeSafeSet(NrrdRange *range,
                                  const Nrrd *nrrd, int blind8BitRange);
NRRD_EXPORT NrrdRange *nrrdRangeNewSet(const Nrrd *nrrd, int blind8BitRange);
NRRD_EXPORT int nrrdHasNonExist(const Nrrd *nrrd);